--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "formik": "^2.4.6",
     "nanoid": "^5.0.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-loader-spinner": "^6.1.6",
+    "react-modal": "^3.16.3",
     "yup": "^1.6.1"
   },
   "devDependencies": {
